# cmdl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cmdl/: __init__.py  __main__.py  _command_line_parser.py  _exceptions.py
tests/: test_command_add.py
