[tool.poetry]
name = "cmdl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "cmdl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^10.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.2"
black = "^21.9-beta.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
