[tool.poetry]
name = "cmdl"
version = "0.1.1"
description = "Simple command-line parser written in Python."
authors = ["Cypheriel <cypheriel@github.com>"]
packages = [
    { include = "cmdl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.10.0"

[tool.poetry.group.dev.dependencies]
black = "^21.9-beta.0"
pre-commit = "^2.15.0"
pep8-naming = "^0.12.1"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.0"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.3.0"
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
